framec_tests/language_specific/cpp/v3_facade_smoke/negative/strict_malformed_stmt.frm
@target cpp

system S {
    machine:
        $A {
            e() {
                => $^
                int x = ; // malformed native statement
            }
        }
}

